- 
    
Bug
 - 
    Resolution: Fixed
 - 
    
P2: Important
 - 
    6.8
 - 
    None
 
- 
        7e4628dbd (dev), 396511e53 (6.8)
 
The sourcelocation of a function keyword in the DOM representation of a lambda does contain a wrong length that includes all the space after the function keyword. Fix the bug in the lexer that does create wrong token lengths for function keywords.
- is required for
 - 
                    
QTBUG-92876 Dom: model JS expressions/statements in QmlDom and add qmlls (find usages, go to definition, ...) support for them
-         
 - Closed
 
 -         
 - 
                    
        
        QTBUG-124625
        Highlight lambda expressions
    
-         
 - Closed
 
 -