qqmljslexer: split T_FUNCTION_STAR into T_FUNCTION and T_STAR

Partially reverts commit 4ba86a97011dda2d8792ee23f0e86015715a592e
that tried to reduce the number of parser conflicts by introducing
new parser rules and a new token T_FUNCTION_STAR.

The new token T_FUNCTION_STAR seems unnecessary: removing it does not
make new conflicts appear in the parser. Furthermore, it allows
removing some special handling from the lexer.

Therefore, remove all occurrences of T_FUNCTION_STAR and replace it with
T_FUNCTION and T_STAR. Add the sourcelocation of the star to the
FunctionExpression so it becomes available (previously the star was
located at the end of the function-token sourcelocation).

Change the parser to create Function Declaration early in its
FunctionStar rule, so it can save the sourcelocation of the "function"
keyword and the "*" token in FunctionDeclaration.

Also fix indexes in the parser where T_FUNCTION T_STAR does shift all
the following arguments by one position to the left.

Pick-to: 6.8
Fixes: QTBUG-126676
Change-Id: I4c405c136137628e58469b91f2b93dc2edb110e3
Reviewed-by: Fabian Kosmale <fabian.kosmale@qt.io>
Reviewed-by: Olivier De Cannière <olivier.decanniere@qt.io>