src/qmldom/qqmldomoutwriter.cpp
@@ -257,6 +257,9 @@ OutWriter &OutWriter::writeRegion(FileLocationRegion region)
     case SuperKeywordRegion:
         codeForRegion = u"super"_s;
         break;
+    case StarTokenRegion:
+        codeForRegion = u"*"_s;
+        break;
     // not keywords:
     case ImportUriRegion:
     case IdNameRegion:
